Fixed some layout issues, implemented rough mobile layout

--- a/style.css
+++ b/style.css
@@ -3,19 +3,22 @@
     background-color: black;
     color: white;
   }
-p {
+p, a {
     font-family: 'Public Sans', sans-serif;
     font-size: 20px;
 }
 a {
     text-decoration: none;
-    color: black;
+    color: inherit;
+}
+a.dark-mode {
+    text-decoration: none;
+    color: inherit;
 }
 a:hover{
     text-shadow: 0 0.015em #101010,0 -0.015em #101010,0.01em 0 #101010,-0.01em 0 #101010;
 }
-a.dark-mode:hover {
-    text-shadow: 0 0.015em #FFF,0 -0.015em #FFF,0.01em 0 #FFF,-0.01em 0 #FFF;
+.dark-mode a:hover {
     text-shadow: 0 0.015em #FFF,0 -0.015em #FFF,0.01em 0 #FFF,-0.01em 0 #FFF;
 }
 
@@ -65,21 +68,37 @@ header button {
     margin-right: 3vw;
     margin-left: 1vw;
 }
+
+/*
+#icon:before {
+  font-family: "Font Awesome 5 Free";
+  content: "\e28f";
+  font-style: normal;
+}
+
+#icon.is-active:before {
+  font-family: "Font Awesome 5 Free";
+  content: "\f058";
+}
+*/
+
 main {
     margin-top: 16vh;
-    margin-left: 2vw;
-    margin-right: 2vw;
+    margin-left: auto;
+    margin-right: auto;
     display: flex;
     flex-direction: column;
+    max-width: 50%;
 }
 main .about-me-summary .about-me-text {
     display: flex;
 }
 main .about-me-summary .about-me-text p{
     width: 60%;
+    align-self: center;
 }
 main .about-me-summary .about-me-text img {
-    height: 30vh;
+    max-height: 30vh;
     margin-left: auto;
     margin-right: auto;
     border-radius: 50%;
@@ -126,10 +145,7 @@ main .skills-summary .skills-container .skill {
     margin: 0 2vw;
     z-index: 1;
 }
-#skill-one i, #skill-one h3 {
-    display: inline-block;
-    margin: 0 5px;
-}
+
 
 .skill i {
     font-size: 150%;
@@ -139,13 +155,66 @@ main .skills-summary .skills-container .skill {
     margin-left: auto;
     margin-right: auto;
 }
-#skill-two i, #skill-two h3 {
+#skill-one i, #skill-one h3 {
     display: inline-block;
     margin: 0 5px;
 }
+#skill-two i, #skill-two h3, #skill-two p.language {
+    display: inline-block;
+    margin: 0 5px;
+}
+p.language {
+    font-size: 29px;
+}
 #skill-three i, #skill-three h3 {
     display: inline-block;
+    margin: 0 5px;
 }
 .hover {
     position: absolute;
+}
+
+
+.contact-summary i {
+    font-size: 300%;
+    margin: 0 2vw;
+}
+@media screen and (max-width: 600px) {
+    h1 {
+        font-size: 16px;
+    }
+    p,a {
+        font-size: 14px;
+    }
+    header {
+        height: 10vh;
+    }
+    main {
+        max-width: 80%;
+    }
+    .about-me-summary {
+        display: flex;
+        flex-direction:column;
+    }
+    .about-me-text {
+        display: flex;
+        flex-direction: column-reverse;
+        width: 100%;
+    }
+    main .about-me-summary .about-me-text p{
+    width: 100%;
+    }
+    .projects-container {
+        flex-direction: column;
+    }
+    main .projects-summary .projects-container .project {
+    min-width: 80%;
+    position: relative;
+    display: flex;
+    flex-direction: column;
+    margin: 0 5vw;
+    }
+    .skills-container {
+        flex-direction: column;
+    }
 }
